# filepath-examples

./: CHANGELOG.md  LICENSE  List.hs  README.md  cabal.project  conf.txt  filepath-examples.cabal
examples/: Conf.hs  Process.hs  Read.hs  Unix.hs
