cabal-version:      3.4
name:               filepath-examples
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Julian Ospald
maintainer:         hasufell@posteo.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall


-- read a specific file
executable example1
    import:           warnings
    main-is:          Read.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , filepath ^>=1.4.99.5
                    , file-io
                    , safe-directory
                    , text
    default-language: Haskell2010

-- get a filepath from a config file and read that
executable example2
    import:           warnings
    main-is:          Conf.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , filepath ^>=1.4.99.5
                    , file-io
                    , safe-directory
                    , text
    default-language: Haskell2010

-- use the process package with OsPaths
-- by utilizing the String conversion functions
executable example3
    import:           warnings
    main-is:          Process.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , filepath ^>=1.4.99.5
                    , file-io
                    , process
                    , safe-directory
                    , text
    default-language: Haskell2010
